add antdesign, create login button component

--- a/frontend/app/components/layout/header/Header.module.scss
+++ b/frontend/app/components/layout/header/Header.module.scss
@@ -3,10 +3,8 @@
 .header {
     background-color: $main_400;
     padding: 20px $desktop-side-padding;
-
-    .btnLogin {
-        margin-left: auto;
-        display: block;
-    }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
